# python-process-per-kafka-consumer

./: config.json  config.py  kafka_binding_executor.py  kafka_binding_processes.py  main.py  pyproject.toml
